--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@ Meade Services</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Meade Services Inc. Website">
 <style>
-body {background-color:#216db0;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
-h1{text-align:center;font-family:Arial, sans-serif;color:#ffffff;background-color:#216db0;}
-p {text-align:center;font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#ffffff;background-color:#216db0;}
+body {background-color:#0f68a7;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
+h1{text-align:center;font-family:Arial, sans-serif;color:#ffffff;background-color:#0f68a7;}
+p {text-align:center;font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#ffffff;background-color:#0f68a7;}
 </style>
 </head>
 <body>
-<h1>MEADE SERVICES<br><br>COMMERICIAL & RESIDENTIAL REMODELING & PAINTING</h1>
+<p><img src="https://i.imgur.com/d3wN811.png" alt="" /></p>
+<h1>COMMERICIAL & RESIDENTIAL REMODELING & PAINTING</h1>
 <p> Monday - Friday 8am - 4pm CST </p>
 <p>(312) 593-1595 </p>
 <p>meadeservices@gmail.com</p>
