--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 Meade Services</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Meade Services Inc. Website">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <style>
 body {background-color:#0f68a7;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
 h1{text-align:center;font-family:Arial, sans-serif;color:#ffffff;background-color:#0f68a7;}
