--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ p {text-align:center;font-family:Georgia, serif;font-size:14px;font-style:normal
 </style>
 </head>
 <body>
-<p><img style="max-width: 100%; height: auto;" src="https://i.imgur.com/dSsrCee.png" alt="Meade Services Inc." /></p>
+<p><img src="https://i.imgur.com/dSsrCee.png" alt="" /></p>
 <h1>COMMERCIAL & RESIDENTIAL REMODELING & PAINTING</h1>
 <p> Monday - Friday 8am - 4pm CST </p>
 <p>(312) 593-1595 </p>
